# sawmill

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ExtDataFrame_unstructured_parsing.ipynb  LICENSE  Makefile  README.md  bandit.yaml  better_table_scratch.ipynb  demo.sql  filter.sql  package-lock.json  package.json  parsers.ipynb  pnpm-lock.yaml  pyproject.toml  results.txt  ruff.toml  scratchpad.ipynb  unstructured.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: check_sawmill.yaml
docs/: data-structure-notes.md  how-it-works.md  motivation.md  recommended-learning-resources.md  sawmill_design.md  schema-rough-draft.md
src/sawmill/: better_table.py  cli.py  config.py  entry.py  restructured.py  schema.py  tui.py  unstructured.py
test_files/: 1d4c79af_c5c3_4b7c_9347_beb5eda819e8_job_10344_attempt_1_txt.txt  1d4c79af_c5c3_4b7c_9347_beb5eda819e8_job_10349_attempt_1_txt.txt  1d4c79af_c5c3_4b7c_9347_beb5eda819e8_job_10357_attempt_1_txt.txt  906fe1ca_21e1_446c_8200_ee70def70831_logs_1787_txt.txt  906fe1ca_21e1_446c_8200_ee70def70831_logs_1788_txt latest after upgrade.txt  data_engineering_job_99_attempt_1_txt.txt  e0e0a1f1_9e7d_488c_afb1_2e633b1237a6_job_4063_attempt_1_txt.txt  logs_failed.txt  simple_unstructured.txt  test-file-output.txt
tests/: test_cli.py
